k8s/1.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  labels:
    demo: test-2508
spec:
  containers:
  - name: demo-app
    image: nginx:1.14.2
    ports:
      - containerPort: 80
