k8s/3.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    demo: test-2508
  ports:
  - port: 80
    targetPort: 80
