k8s/4.service-external-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    demo: test-2508
spec:
  type: LoadBalancer
  selector:
    demo: test-2508
  ports:
  - port: 80
    targetPort: 80
  externalIPs:
    - "146.190.195.43"
