k8s/4.service-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    demo: test-2508
  ports:
  - port: 80
    name: http
    targetPort: 80
  - port: 443
    name: https
    targetPort: 443
